--- a/目录.md
+++ b/目录.md
@@ -1,69 +1,87 @@
 # UE4 目录
 
+
 ### 开始
-UE 4 介绍
-UE 5 介绍
-安装 Unreal Engine
-新建第一个游戏项目
-查看UE商城并导入素材
-复制素材库注意事项
-编辑器参数设置
+
+- UE 4 介绍
+- UE 5 介绍
+- 安装 Unreal Engine
+- 新建第一个游戏项目
+- 查看UE商城并导入素材
+- 复制素材库注意事项
+- 编辑器参数设置
 
 ## 第一阶段
 涉及蓝图入门，简单场景设计，简单动画设计，模拟物理
 
 ### 入门
-放入模型与调整材质
-放置与调整光源
-玩家出生点的几种不同方式
-模拟真实世界的物理
-第一个蓝图 打印字符"Hello World"
-碰撞器 Collision 灭火游戏
-设置默认打开的地图
+
+- 放入模型与调整材质
+- 放置与调整光源
+- 玩家出生点的几种不同方式
+- 模拟真实世界的物理
+- 第一个蓝图 打印字符"Hello World"
+- 碰撞器 Collision 灭火游戏
+- 设置默认打开的地图
+
 
 ### 初涉地形
-创造一个地形
-放上树木 草地 石头
-高度雾与体积光
+
+- 创造一个地形
+- 放上树木 草地 石头
+- 高度雾与体积光
+
 
 ### 玩家角色
-创建一个玩家可控制的角色 
-Input
-添加玩家属性（变量）
-创建一个GameMode
+
+- 创建一个玩家可控制的角色 
+- Input
+- 添加玩家属性（变量）
+- 创建一个GameMode
+
 
 ### 初涉动画
-创建一个镜头动画
-做动画前将视窗调节至双视图。左透视，右摄影机。
-”S“打关键帧。
-灯光与其他元素动画
-导入音乐
-导出动画
+
+- 创建一个镜头动画
+- 做动画前将视窗调节至双视图。左透视，右摄影机。
+- ”S“打关键帧。
+- 灯光与其他元素动画
+- 导入音乐
+- 导出动画
+
 
 ### 丰富场景
-放置一团火
-给火加一个音效 并空间化声音
-全局后期处理 与 后期处理体积
-设置边界 阻挡体积
+
+- 放置一团火
+- 给火加一个音效 并空间化声音
+- 全局后期处理 与 后期处理体积
+- 设置边界 阻挡体积
+
 
 ### 添加规则
-超级跳 / Do Once
-超级冲刺 / Do N
-变身区 / 改变材质与重量
-变大区 / FlipFlop
-变形区 / 改变静态网格体
-瞬移区 / 改变世界位置
-生成火焰 / Spawn
-掉落深渊返回原地
-胜利区域 / 初涉粒子系统
+
+- 超级跳 / Do Once
+- 超级冲刺 / Do N
+- 变身区 / 改变材质与重量
+- 变大区 / FlipFlop
+- 变形区 / 改变静态网格体
+- 瞬移区 / 改变世界位置
+- 生成火焰 / Spawn
+- 掉落深渊返回原地
+- 胜利区域 / 初涉粒子系统
+
 
 ### 添加NPC
-旋转的障碍物 / 时间轴
-摆动的障碍物
+
+- 旋转的障碍物 / 时间轴
+- 摆动的障碍物
+
 
 ### 导出
-设置App图标
-打包游戏
+
+- 设置App图标
+- 打包游戏
+
 
 -----------------
 
@@ -71,77 +89,97 @@ Input
 涉及角色，伤害，背包，UI，骨骼，物理Actor，贴花，声音处理。初步接触面向对象的编程方法。
 
 ### Lucy
-准备新世界
-替换第三人称角色
-显示鼠标光标
-鼠标滚轮控制摄像机
-关卡切换
-绑定动画 / 重定向动画
-添加用户界面HP / UI
-应用伤害
-持续伤害
-绑定受伤动画
-添加受伤音效
-引火上身
-角色死亡
-治疗物品
-在鼠标位置放置物品
-放置NPC
-使用UI来显示NPC对话内容
-简单的发射子弹
+
+- 准备新世界
+- 替换第三人称角色
+- 显示鼠标光标
+- 鼠标滚轮控制摄像机
+- 关卡切换
+- 绑定动画 / 重定向动画
+- 添加用户界面HP / UI
+- 应用伤害
+- 持续伤害
+- 绑定受伤动画
+- 添加受伤音效
+- 引火上身
+- 角色死亡
+- 治疗物品
+- 在鼠标位置放置物品
+- 放置NPC
+- 使用UI来显示NPC对话内容
+- 简单的发射子弹
+
 
 ### 背包
-理解面向对象
-用“类”创建物品
-背包UI
-鼠标拾取物品
-完成背包
-为物品“类”添加“行为”
-使用物品
+
+- 理解面向对象
+- 用“类”创建物品
+- 背包UI
+- 鼠标拾取物品
+- 完成背包
+- 为物品“类”添加“行为”
+- 使用物品
+
 
 ### NPC
-为敌人添加HP
-显示敌人HP
-物品点击事件
+
+- 为敌人添加HP
+- 显示敌人HP
+- 物品点击事件
+
 
 ### 暂停菜单
-暂停菜单UI / 动态添加Post Processing 
-添加暂停按钮
-UI动画
+
+- 暂停菜单UI / 动态添加Post Processing 
+- 添加暂停按钮
+- UI动画
+- 
 
 ### Construction Script 
-构造脚本简介
-循环生成静态网格体 / For
-For 循环的嵌套
-随机生成静态网格体
+
+- 构造脚本简介
+- 循环生成静态网格体 / For
+- For 循环的嵌套
+- 随机生成静态网格体
+
 
 ### 贴花
-使用贴花 / Decal
-制作贴花材质
+
+- 使用贴花 / Decal
+- 制作贴花材质
+
 
 ### 导入模型
-导入模型 / FBX文件
-修改模型的碰撞
-导入C4D模型
-导入骨骼网格体
+
+- 导入模型 / FBX文件
+- 修改模型的碰撞
+- 导入C4D模型
+- 导入骨骼网格体
+
 
 ### 物理Actor
-添加物理推进器 Thurster
-添加径向力 Radial Force 
-添加约束力 Constraint
+
+- 添加物理推进器 Thurster
+- 添加径向力 Radial Force 
+- 添加约束力 Constraint
+
 
 ### 骨骼物理
-局部受伤
-让击中的骨骼受伤
+
+- 局部受伤
+- 让击中的骨骼受伤
+- 
 
 ### 声音
-导入WAV或MP3音频
-空间化声音
-衰减预设
-添加混响 Reverb
-Sound Cue 对声音进行蓝图
-Sound Cue 制作多普勒音效
-空气吸收 / 滤波
+
+- 导入WAV或MP3音频
+- 空间化声音
+- 衰减预设
+- 添加混响 Reverb
+- Sound Cue 对声音进行蓝图
+- Sound Cue 制作多普勒音效
+- 空气吸收 / 滤波
+
 
 ---------------
 
@@ -149,34 +187,42 @@ Sound Cue 制作多普勒音效
 高级光照，动画制作，蓝图动画，场景优化，实时光线追踪，不同的运动组件
 
 ### 准备新世界
-推荐几个megascan的超帅场景，为静态光照 动画 电影做准备
-森林
-废墟公寓
-山洞蜡烛
-赛博朋克
-Lake House
+
+- 推荐几个megascan的超帅场景，为静态光照 动画 电影做准备
+- 森林
+- 废墟公寓
+- 山洞蜡烛
+- 赛博朋克
+- Lake House
+
 
 ### 优化光照
-静态光照
-开关
-参数设置
-贴图分辨率
-Post Processing 开启光线追踪
-Post Processing 更多光的细节设置
+
+- 静态光照
+- 开关
+- 参数设置
+- 贴图分辨率
+- Post Processing 开启光线追踪
+- Post Processing 更多光的细节设置
+
 
 ### Sequencer 制作动画
-准备场景
-添加摄像机并运镜
-        蓝图控制动画人物动画
-        如果一个Animation包含很多动作，就用Subscenes Track把这场戏做到一起。
-Sequencer Recorder 
-添加更多场景元素
+
+- 准备场景
+- 添加摄像机并运镜
+-         蓝图控制动画人物动画
+-         如果一个Animation包含很多动作，就用Subscenes Track把这场戏做到一起。
+- Sequencer Recorder 
+- 添加更多场景元素
+
 
 ### 优化场景
-Level Streaming
-Cuiling Distance
-LOD
-动态载
+
+- Level Streaming
+- Cuiling Distance
+- LOD
+- 动态载
+
 
 ### 动画蓝图
 制作一个大头娃娃 蓝图与动画蓝图通讯
